--- a/style.css
+++ b/style.css
@@ -485,3 +485,8 @@ footer .section-share i:hover {
 .instagram {
 	padding: 60px 168px;
 }
+
+.instagram .headline {
+	text-align: center;
+	margin-bottom: 30px;
+}
