--- a/style.css
+++ b/style.css
@@ -490,3 +490,13 @@ footer .section-share i:hover {
 	text-align: center;
 	margin-bottom: 30px;
 }
+
+.home-container .main-container.archive {
+	padding-top: 0px;
+	top: 0px;
+}
+
+.home-container .main-container.archive .headline {
+	text-align: center;
+	margin-bottom: 30px;
+}
