--- a/style.css
+++ b/style.css
@@ -501,7 +501,8 @@ footer .section-share i:hover {
 }
 
 .home-container .main-container.archive .cta-articles,
-.home-container .main-container.testimonials .cta-testimonials {
+.home-container .main-container.testimonials .cta-testimonials,
+. {
 	padding: 12px 30px;
 	background: var(--highlight);
 	display: inline-block;
@@ -537,4 +538,27 @@ footer .section-share i:hover {
 .home-container .main-container.testimonials .headline {
 	text-align: center;
 	margin-bottom: 30px;
+}
+
+.single-product-container {
+	padding: 60px 168px;
+}
+
+.woocommerce .product .product_title {
+	font-weight: 400;
+	font-size: 26px;
+}
+
+.woocommerce .product .star-rating {
+	float: left;
+	width: 5.5em;
+	color: #ffb04a;
+	margin-right: 5px;
+	display: flex;
+	align-items: center;
+}
+
+
+.woocommerce .product .sku_wrapper {
+	display: none;
 }
