--- a/style.css
+++ b/style.css
@@ -502,7 +502,7 @@ footer .section-share i:hover {
 
 .home-container .main-container.archive .cta-articles,
 .home-container .main-container.testimonials .cta-testimonials,
-. {
+.woocommerce .product .cart .button {
 	padding: 12px 30px;
 	background: var(--highlight);
 	display: inline-block;
@@ -560,4 +560,90 @@ footer .section-share i:hover {
 
 .woocommerce .product .sku_wrapper {
 	display: none;
+}
+
+.woocommerce .product .cart .button {
+	margin-bottom: 0px;
+	left: 0px;
+	transform: translateX(0);
+}
+
+.woocommerce .product .cart .button:hover {
+	background-color: var(--highlight);
+}
+
+.woocommerce .product .cart {
+	display: flex;
+	flex-direction: column;
+}
+
+.woocommerce .product .cart .quantity {
+	margin-bottom: 15px;
+}
+
+.woocommerce .quantity .qty {
+	border: none;
+	border-bottom: 1px solid rgba(0, 0, 0, .3);
+	margin-bottom: 15px;
+	width: 45px;
+	margin-bottom: 15px;
+	font-size: 20px;
+}
+
+.woocommerce .quantity .qty::-webkit-outer-spin-button,
+.woocommerce .quantity .qty::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+.woocommerce .quantity .qty[type="number"] {
+	-moz-appearance: textfield;
+}
+
+.woocommerce .product .price {
+	margin-bottom: 20px;
+}
+
+.woocommerce .product .qty-label {
+	padding-right: 15px;
+}
+
+.woocommerce .product .qty-container {
+	display: flex;
+	align-items: center;
+	margin-bottom: 10px;
+}
+
+.woocommerce .product_meta {
+	display: none;
+}
+
+.woocommerce .product .cart .button.disabled,
+.woocommerce .product .cart .button.disabled:hover {
+	background-color: var(--highlight);
+}
+
+.woocommerce .product .cart .variations select {
+	padding: 10px 15px;
+}
+
+.woocommerce .product .woocommerce-tabs .tabs {
+	text-align: center;
+	background-color: #fff;
+}
+
+.woocommerce .product .woocommerce-tabs .tabs li {
+	width: 300px;
+	border: 1px solid rgba(0, 0, 0, .3) !important;
+	border-radius: 0px !important;
+	background-color: #fff !important;
+}
+
+.woocommerce .product .woocommerce-tabs .tabs li.active {
+	color: var(--highlight);
+	background-color: #fff !important;
+}
+
+.woocommerce .product .woocommerce-tabs .tabs::before {
+	border-bottom: none !important;
 }
