--- a/style.css
+++ b/style.css
@@ -485,7 +485,8 @@ footer .section-share i:hover {
 	float: right;
 }
 
-.instagram {
+.instagram,
+.content-container {
 	padding: 60px 168px;
 }
 
@@ -507,9 +508,10 @@ footer .section-share i:hover {
 .home-container .main-container.testimonials .cta-testimonials,
 .woocommerce .product .cart .button,
 .woocommerce a.button.alt,
-.woocommerce button.button.alt {
+.woocommerce button.button.alt,
+.wpforms-form button[type=submit] {
 	padding: 12px 30px;
-	background: var(--highlight);
+	background: var(--highlight) !important;
 	display: inline-block;
 	border-radius: 7px;
 	color: #fff;
@@ -519,6 +521,11 @@ footer .section-share i:hover {
 	text-transform: uppercase;
 	font-weight: 400;
 	margin-bottom: 50px;
+}
+
+.wpforms-form button[type=submit] {
+	color: #fff !important;
+	font-family: "Mulish", sans-serif;
 }
 
 .home-container .main-container.testimonials .cta-testimonials {
@@ -569,7 +576,8 @@ footer .section-share i:hover {
 
 .woocommerce .product .cart .button,
 .woocommerce a.button.alt,
-.woocommerce button.button.alt {
+.woocommerce button.button.alt,
+.wpforms-form button[type=submit] {
 	margin-bottom: 0px;
 	left: 0px;
 	transform: translateX(0);
@@ -577,7 +585,8 @@ footer .section-share i:hover {
 
 .woocommerce .product .cart .button:hover,
 .woocommerce a.button.alt:hover,
-.woocommerce button.button.alt:hover {
+.woocommerce button.button.alt:hover,
+.wpforms-form button[type=submit]:hover {
 	background-color: var(--highlight);
 }
 
@@ -741,4 +750,24 @@ footer .section-share i:hover {
 .xoo-wsc-container {
 	padding-top: 20px;
 	padding-bottom: 20px;
+}
+
+div.wpforms-container-full .wpforms-form input.wpforms-field-medium,
+div.wpforms-container-full .wpforms-form select.wpforms-field-medium,
+div.wpforms-container-full .wpforms-form .wpforms-field-row.wpforms-field-medium,
+div.wpforms-container-full .wpforms-form input.wpforms-field-medium {
+	max-width: 100%;
+	font-family: "Mulish", sans-serif;
+}
+
+.wpforms-field-container input,
+.wpforms-field-container textarea {
+	letter-spacing: 1px !important;
+}
+
+.wpforms-confirmation-container-full {
+	background: var(--highlight);
+	color: #fff;
+	border: none;
+	border-radius: 4px;
 }
