--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Author: Arkalys
 Author URI: http://www.oceanwinckler.com
 */
 
-/*@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
 	margin: 0;
@@ -275,6 +275,21 @@ header.nav li a[aria-current] {
 	margin-bottom: 40px;
 }
 
+.archive-container-head {
+	padding: 0px 168px;
+}
+
+.archive-container-head h2 {
+	font-weight: 400;
+	color: rgba(0, 0, 0, .7);
+}
+
+.archive-container-head p {
+	font-weight: 300;
+	margin-bottom: 10px;
+	white-space: pre-line;
+}
+
 .archive-container,
 .archive .navigation {
 	padding: 60px 168px;
@@ -364,12 +379,16 @@ header.nav li a[aria-current] {
 }
 
 footer {
-	padding: 60px 168px;
+	padding: 30px 168px;
 	background: var(--secondary);
 	color: var(--highlight);
 	grid-row-gap: 0px !important;
 	position: relative;
 	top: 135px;
+}
+
+footer.home-footer {
+	top: 0px;
 }
 
 footer img,
@@ -404,18 +423,23 @@ footer ul *:last-child {
 
 footer .section-share {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
-	height: fit-content;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	justify-content: center;
 }
 
 footer .section-share i {
-	margin-bottom: 10px;
+	margin-top: 10px;
 	font-size: 25px;
 	cursor: pointer;
 	transition: transform .3s ease;
+}
+
+footer .section-share a {
+	margin-right: 10px;
+}
+
+footer .section-share a:last-child {
+	margin-right: 0px;
 }
 
 footer .section-share a {
@@ -428,6 +452,16 @@ footer .section-share i:hover {
 
 footer.home-footer {
 	top: 0px !important;
+}
+
+footer .copyright {
+	margin-top: 10px;
+	text-align: center;
+}
+
+footer.grid-layout {
+	grid-row-gap: 0px;
+	align-items: center;
 }
 
 .main-container.woocommerce {
@@ -617,6 +651,10 @@ footer.home-footer {
 .woocommerce .product .cart {
 	display: flex;
 	flex-direction: column;
+}
+
+.woocommerce .product .product-description {
+	white-space: pre-line;
 }
 
 .woocommerce .product .cart .quantity {
